# cv-2020

./: .gitattributes  .gitignore
final/: README.md
final/cpp/: CMakeLists.txt  Makefile  data  main.cpp  run.sh
final/cpp/include/: CMakeLists.txt  estimating.cpp  estimating.hpp  geometry.cpp  geometry.hpp  globla.cpp  globla.hpp  matching.cpp  matching.hpp
final/data/stereo-rectify/1/: para.txt
final/data/stereo-rectify/2/: para.txt
final/data/stereo-rectify/3/: para.txt
include/: CMakeLists.txt  Timer.hpp  pa2.cpp  pa2.hpp
media/: .gitignore
pa1/: README.md  main.py  utils.py
pa2/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
pa3/: .gitignore  cifar10.py  cifar11.py  eval.py  main.py  mnist.py
pa3/datasets/MNIST/: load.py
pa3/datasets/cifar10/: load.py
pa3/datasets/cifar11/: load.py
pa3/datasets/flicker/: dump.py
pa3/utils/: __init__.py  cifar11.py  convnet.py  lenet.py
pa3/weights/: lenet-mnist.pt
